# ACQ-Journal

./: README.md
HierarchicalCommunity/: medsample1.xml
MATLAB/: DynamicFlickr.m  bdpediaMix.m  dblpUpdate.m  dblpV3.m  dbpediaUpdate.m  dbpediaV3.m  flickrMix.fig  flickrMix.m  flickrUpdate.m  flickr_V3.m  tencentUpdate.m  tencentV3.m
SIGMOD2016/: applyhatch.m  avgDegCOD.m  cmf.m  cmfCOD.m  cmfShare.m  cpj.m  cpjCOD.m  cpjShare.m  cqj.m  cwf.m  dblpFreq.m  deg6COD.m  flickrFreq.m  perosonal proposal.docx  tmp.m  刘挺-怎么样做研究.docx
Scala/: build.sbt
VLDBJ/: 1.fdb_latexmk  1.fls  ACQ.aux  ACQ.bbl  ACQ.bib  ACQ.bib.bak  ACQ.blg  ACQ.fdb_latexmk  ACQ.fls  ACQ.tex  ACQ.tex.bak  ACQvariant.fdb_latexmk  ACQvariant.fls  ACQvariant.tex  ACQvariant.tex.bak  abstract.tex  abstract.tex.bak  acq.out  acq.out.bak  algoOfVariant.tex  algoOfVariant.tex.bak  app-advanced.tex  app-auf.tex  app-basic.fdb_latexmk  app-basic.fls  app-basic.tex  app-basic.tex.bak  app-cand.tex  app-inct.tex  app-moreExp.tex  app-proof.tex  app-variant.fdb_latexmk  app-variant.fls  app-variant.tex.bak  appendix.aux  appendix.tex  appendix.tex.bak  basic.tex  basic.tex.bak  conclude.tex  (+48 more)
VLDBJ_EXP_data/: DynamicYoutube.m  dblbMix.m  dblpv1.fig  dblpv2.fig  (+2 more)
workspace/CLion/HCC/: CMakeLists.txt  main.cpp
workspace/CLion/HCC/algo/: HIN_Graph.cpp  HIN_Graph.h  QueryPath.cpp  QueryPath.h  SimCalculator.cpp  SimCalculator.h
workspace/CLion/HCC/dataReader/: DataReader.cpp  DataReader.h
workspace/CLion/HCC/util/: Extract.cpp  Tool.cpp
workspace/CLion/HCC/util/DBLP/: dataProcess.cpp  dataProcess.h
(+1352 files in other folders)
